Cabal-Version:            2.4
Name:                     sentinel-contracts
Version:                  3.0.0
Author:                   Adrian, MIxAxIM
Maintainer:               project-sentinel.org
Build-Type:               Simple
License:                  GPL-3.0-or-later
License-file:             LICENSE

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: True
    manual: False

Common project-config
  default-language:       Haskell2010
  ghc-options:            -Wall
                          -Wcompat
                          -Wincomplete-record-updates
                          -Wnoncanonical-monad-instances
                          -Wredundant-constraints
                          -Wincomplete-uni-patterns
                          -Wunused-packages
                          -Widentities
                          -rtsopts
                          -fno-ignore-interface-pragmas
                          -fno-omit-interface-pragmas
                          -fobject-code
                          -fno-specialise
                          -fno-spec-constr
                          -fno-strictness
  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

  default-extensions:     NoImplicitPrelude
                          OverloadedStrings
                          ExplicitForAll
                          ScopedTypeVariables
                          DeriveGeneric
                          StandaloneDeriving
                          DeriveLift
                          GeneralizedNewtypeDeriving
                          DeriveFunctor
                          DeriveFoldable
                          DeriveTraversable
                          LambdaCase
                          MultiParamTypeClasses
                          TypeOperators
                          FlexibleInstances
                          NamedFieldPuns
                          TypeFamilies
                          FlexibleContexts
                          DeriveAnyClass
                          DerivingStrategies
                          DerivingVia
                          DataKinds
                          PatternGuards
                          GADTs
                          ImportQualifiedPost
                          MultiWayIf
                          RankNTypes
                          RecordWildCards
                          TemplateHaskell
                          TypeApplications
                          UndecidableInstances
                          DuplicateRecordFields
                          InstanceSigs

Library
  import:                 project-config
  hs-source-dirs:         src
  exposed-modules:

                          --Administration
                          Administration.BMAT.Policy

                          Administration.CAT.Types
                          Administration.CAT.Policy

                          Administration.ContractsController.Types
                          Administration.ContractsController.Validator

                          --Oracle
                          Oracle.ThreatDatabase.Types
                          Oracle.ThreatDatabase.AddressList.Validator
                          Oracle.ThreatDatabase.ScriptHashList.Validator

                          Oracle.TDAT.Types
                          Oracle.TDAT.AddressList.Policy
                          Oracle.TDAT.ScriptHashList.Policy

                          --Users
                          Users.Escrow.Types
                          Users.Escrow.Validator




  build-depends:
                          base
                        , plutus-ledger-api
                        , plutus-tx
                        , aeson
                        , plutus-ledger
                        , plutus-tx-plugin
                        , plutus-core

executable write-data
  main-is: write-data.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sentinel-contracts
                     , plutus-ledger-api
                     , bytestring
                     , cardano-api
                     , aeson
                     , plutus-tx
                     , cardano-ledger-core
                     , text
                     , cardano-crypto-class
  default-language:    Haskell2010
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0
